--- a/trabalho/src/css/style.css
+++ b/trabalho/src/css/style.css
@@ -104,25 +104,6 @@
       font-size: 14px;
     }
 
-    /* Botão flutuante WhatsApp */
-    .whatsapp-btn {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background: #25d366;
-      color: #fff;
-      padding: 12px 18px;
-      border-radius: 30px;
-      font-weight: bold;
-      text-decoration: none;
-      box-shadow: 0px 4px 10px rgba(0,0,0,0.3);
-      transition: background 0.3s;
-    }
-
-    .whatsapp-btn:hover {
-      background: #1ebe5d;
-    }
-
     @media (max-width: 600px) {
       header img {
         height: 50px;
@@ -145,3 +126,51 @@
       background: #fff;
       box-shadow: 0px 4px 12px rgba(0,0,0,0.1);
     }
+
+    .icons ul .instagram:hover{
+      color: rgb(188, 10, 211);
+    }
+
+    .icons ul button:hover{
+      background: none;
+      border: 1px solid (255, 255, 255);
+    }
+
+    .icons ul{
+      display: flex;
+      justify-content: center;
+      padding: 5px;
+    }
+
+    .icons ul{
+      padding: 10px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 8px;
+    }
+
+    .icons ul button{
+      font-size: 75px;
+      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+      background: transparent;
+      color: black;
+      border: transparent;
+      border-radius: 10px;
+      cursor: pointer;
+      box-shadow: black;
+      transition: all 0.3s;
+    }
+
+    .icons ul .whatsapp:hover{
+      color: green;
+    }
+
+    .icons ul .gmail:hover{
+      color: red;
+    }
+
+    
+
+
+
