--- a/trabalho/src/css/style.css
+++ b/trabalho/src/css/style.css
@@ -731,8 +731,9 @@ legend {
 }
 
 .inputBox {
-    position: relative;
+    position:initial;
     margin-bottom: 15px;
+    align-items: center;
 }
 
 .inputUser {
@@ -745,11 +746,12 @@ legend {
     width: 100%;
     letter-spacing: 1px;
     padding: 5px 0;
+   
 }
 
 .labelInput {
-    position:relative;
-    top: 0;
+    position:static;
+    top: 3px;
     margin: 1px;
     padding: 1px, 2px;
     left: 0;
@@ -760,8 +762,8 @@ legend {
 
 .inputUser:focus ~ .labelInput,
 .inputUser:valid ~ .labelInput {
-    top: -20px;
-    font-size: 12px;
+    top: 20px;
+    font-size: 18px;
   
     color: #0291d3;
 }
@@ -771,6 +773,7 @@ legend {
     border-radius: 1px;
     outline: none;
     font-size: 15px;
+    align-self: center;
 }
 
 #submit {
